log/build_2024-04-14_08-59-20/my_py_pck/stderr.log
  File "/ssd/workspaces/learn_ros2/install/my_py_pck/lib/python3.8/site-packages/my_py_pck/add_two_ints_server.py", line 13
    self.get_logger().info(str(request.a) + " + " + str(request.b) + " = " str(response.sum))
                                                                           ^
SyntaxError: invalid syntax

